[package]
name = "dynamic-renderer"
version = "0.1.0"
edition = "2021"

[workspace]
members = [
    "common",
    "renderer",
    "text-engine"
]

[profile.dev]
panic="abort"

[profile.release]
panic="abort"
strip="symbols"

[dependencies]
common      = { path = "common" }
renderer    = { path = "renderer", features=["glsl"] }
text-engine = { path = "text-engine" }
raw-window-handle = "0.6"
winit       = "0.30"
ash         = "0.38"
bitflags    = "2"
